<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regsiter"
    android:background="@drawable/colourblend">


    <TextView
        android:id="@+id/register_createNew"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/create_a_new_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_createNew"
        app:layout_constraintVertical_bias="0.818"
        tools:ignore="TextFields,VisualLintOverlap"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/register_confirmPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/register_confirm_password"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679"
        tools:ignore="TextFields,TextContrastCheck" />

    <Button
        android:id="@+id/register_regBtn"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:text="@string/register_register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <ImageView
        android:id="@+id/register_regLogin"
        android:layout_width="409dp"
        android:layout_height="257dp"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/register_createNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/register" />

    <TextView
        android:id="@+id/register_alreadyRegsitered"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:text="@string/register_already_registered_login_here"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_regBtn"
        app:layout_constraintVertical_bias="0.741"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/register_loginBtn"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/register_login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_alreadyRegsitered"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>