<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/colourblend">


    <TextView
        android:id="@+id/login_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/Login_login_to_your_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_login"
        app:layout_constraintVertical_bias="0.818"
        tools:ignore="TextFields,VisualLintOverlap"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login_logBtn"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:text="@string/Login_LOgin"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="405dp"
        android:layout_height="257dp"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/login_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/login_notRegsitered"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:text="@string/login_no_account_register_here"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logBtn"
        app:layout_constraintVertical_bias="0.741"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/login_regBtn"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_notRegsitered"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/login_logBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.17"
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>